# eresult_agent

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  setup_database.bat  setup_db_password.py  ui-smoke-8013.err  ui-smoke-8013.out  ui-smoke-8014.err  ui-smoke-8014.out
config/: system.yaml
config/models/: email_classifier.pkl
docker/: docker-compose.infra.yml  docker-compose.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  IMPLEMENTATION_ROADMAP.md  TARGET_WORKFLOW_AUDIT.md  WORKFLOW.md
infra/k8s/: deployment.yaml
infra/monitoring/: prometheus.yml
infra/monitoring/grafana/: acadextract_dashboard.json
schemas/: 001_core_schema.sql  002_app_partitions.sql
scripts/: _debug_classify.py  seed_test_data.py
src/: __init__.py
src/api/: __init__.py  app.py
src/api/routes/: accounts.py  admin.py  agent.py  auth.py  health.py  health_simple.py  pipeline.py  query.py  sync.py  webhook.py
src/common/: __init__.py  cache.py  celery_app.py  config.py  database.py  elasticsearch_client.py  email_classifier.py  email_sender.py  embeddings.py  models.py  observability.py  security.py  storage.py
src/frontend/: index.html
src/frontend/static/css/: styles.css
src/frontend/static/js/: app.js
src/phase1_email_intelligence/: __init__.py  attachment_extractor.py  classification.py  dedup.py  ingestion.py
src/phase2_document_intelligence/: __init__.py  docx_odf_parser.py  excel_parser.py  html_parser.py  llamaparse_adapter.py  ocr_pipeline.py  pdf_parser.py  router.py  table_detector.py  table_stitcher.py  universal_converter.py
src/phase3_extraction_engine/: __init__.py  enhanced_llm_extractor.py  llm_extractor.py  review_queue.py  strategy_merger.py  universal_extractor.py  validator.py
src/phase3_information_extraction/: __init__.py  extraction_pipeline.py  llm_extractor.py  merger.py  regex_engine.py  rule_engine.py  validator.py
src/phase4_agentic_layer/: __init__.py  agent.py  critic.py  executor.py  memory.py  planner.py  tools.py
src/phase5_query_engine/: __init__.py  aggregation_engine.py  answer_generator.py  entity_resolver.py  intent_parser.py  sql_generator.py
src/tasks/: __init__.py  extraction.py  imap_sync.py  indexing.py  ingestion.py  pipeline_runner.py
tests/: conftest.py  test_api.py  test_extraction.py  test_query_engine.py
